# Compiler

./: CMakeLists.txt  Compiler  instructiontable.cpp  instructiontable.h  lexer.cpp  lexer.h  main.cpp  symboltable.cpp  symboltable.h  syntaxanalyzer.cpp  syntaxanalyzer.h  token.h
Test outputs & files/Test/: test.rat  test_output
Test outputs & files/Test3/: test3.rat  test3_output
Test outputs & files/Test4/: test4.rat  test4_output
